--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,15 +15,15 @@ jobs:
     steps:
       - uses: oprypin/find-latest-tag@v1
         with:
-          repository: tobalan/plugin.video.jiotv # The repository to scan.
+          repository: riyazkhan1432021/plugin # The repository to scan.
           releases-only: true # We know that all relevant tags have a GitHub release for them.
         id: octokit # The step ID to refer to later.
 
       - run: echo "plugin.video.jiotv is at version ${{ steps.octokit.outputs.tag }}"
       - uses: actions/checkout@v3
         with:
-          repository: tobalan/plugin.video.jiotv
-          path: plugin.video.jiotv
+          repository: riyazkhan1432021/plugin
+          path: plugin
           ref: ${{ steps.octokit.outputs.tag }}
 
       - name: Set up Python 3.8
@@ -41,7 +41,7 @@ jobs:
         uses: montudor/action-zip@v1
 
       - name: Zip output
-        run: zip -qq -r plugin.video.jiotv-${{ steps.octokit.outputs.tag }}.zip plugin.video.jiotv -x "plugin.video.jiotv/.github/*" "plugin.video.jiotv/.git/*"
+        run: zip -qq -r plugin.video.jiotv-${{ steps.octokit.outputs.tag }}.zip plugin -x "plugin/.github/*" "plugin/.git/*"
 
       - uses: actions/checkout@v3
         with:
